# devops-agent

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  PRD.md  README.md  config.yaml.example  demo.webm  start.sh
config/: default.yaml
k8s/: rbac.yaml
migrations/: 20260701000000_create_tables.sql  20260701000001_incident_metrics.sql  20260701000002_incident_cleanup_index.sql
src/: email.rs  main.rs  whois.rs
src/agent/: hooks.rs  mod.rs  react.rs
src/config/: mod.rs  models.rs
src/db/: mod.rs  queries.rs  schema.rs
src/elasticsearch/: dsl_validator.rs  mod.rs  queries.rs
src/k8s/: blocker.rs  inspector.rs  mod.rs
src/llm/: provider.rs
src/models/: action.rs  incident.rs  mod.rs  recommendation.rs
src/scheduler/: mod.rs
src/tools/: apply_block.rs  check_allowlist.rs  inspect_patterns.rs  mod.rs  query_logs.rs
src/web/: api.rs  mod.rs
src/web/static/: app.js  index.html  styles.css
