[package]
name = "devops-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
autoagents = "0.3"
autoagents-guardrails = "0.3"
autoagents-llm = { version = "0.3", features = ["ollama", "openai", "anthropic", "deepseek", "groq", "openrouter"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
kube = { version = "0.98", features = ["client", "derive", "rustls-tls"] }
k8s-openapi = { version = "0.24.0", features = ["v1_30"] }
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", features = ["macros", "json"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["fs", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
rustls = { version = "0.23", features = ["ring"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
rust_xlsxwriter = "0.96.0"

[dev-dependencies]
tempfile = "3"
